# basic_build_stm32_nob

./: .gitignore  CMakeLists.txt  main.cpp  mk.c  nob.h  readme.md
